<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical"
    android:background="@drawable/background4">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/signtwo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header1"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header2"
        android:textColor="#ffffff"
        android:layout_marginStart="40dp" />


</LinearLayout>