<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backtwo"
    android:orientation="vertical"
    android:id="@+id/drawer"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginTop="40dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/logo"
        android:layout_marginBottom="30dp"
        android:src="@drawable/signtwo"
        android:contentDescription="@string/flop" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutemail"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/logo"
        android:background="@drawable/custom_button"
        >
        <EditText
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_mail"
            android:layout_height="40dp"
            android:id="@+id/email"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint1"
            android:textColor="@color/colorText"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/layoutpassword"
        android:layout_below="@+id/layoutemail"
        android:background="@drawable/custom_button"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/hint5"
            android:inputType="textPassword"
            android:textColor="@color/colorText" />

    </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutpassword"
            android:layout_marginTop="10dp"
            android:text="@string/hint3"
            android:textSize="15sp"
            android:textColor="@color/colorText"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:layout_marginTop="35dp"
        android:layout_below="@id/checkbox"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:text="@string/five"
        android:background="@drawable/round_button"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_below="@+id/checkbox"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/four"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/link_regist"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorAccent"
        android:gravity="center"/>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_items"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"
        android:id="@+id/nav_drawer"
        android:background="#ffffff">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>