<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/drawer"
    tools:context=".Navigation">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/v_flipper">

    </ViewFlipper>


    <TabHost
        android:id="@+id/tabhost"
        android:layout_below="@id/v_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:background="@drawable/background4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@mipmap/blood_hub_round"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/image" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header1"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#071153"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/call2"
                        android:background="@drawable/background4"
                        android:layout_marginTop="5dp"
                        android:id="@+id/textView"
                        android:gravity="center"
                        android:textColor="#ffeeee"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        />
                    <TextView
                        android:id="@+id/movee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:padding="5dp"
                        android:layout_marginTop="5dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/call"
                        android:textColor="#f5f4f0"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:id="@+id/btn_emergency"
                        android:layout_marginTop="20dp"
                        android:text="@string/text3"
                        android:textStyle="bold"
                        android:textColor="#f2f6f9"
                        android:onClick="Emergency"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawableEnd="@drawable/ic_ambulance"
                        android:background="@drawable/design_button"
                        android:layout_marginBottom="10dp"
                        />
                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/backg">

                    </GridLayout>

                </LinearLayout>
                </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:background="#cae7d7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:background="@drawable/draw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:id="@+id/profile_image"
                                android:layout_marginTop="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_account_circle_black_24dp"/>
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
                                android:text="@string/text"
                                android:textColor="#f4f1f1"
                                android:id="@+id/btn_photo"
                                android:layout_gravity="center"
                                android:drawableStart="@drawable/ic_edit_black_24dp"
                                />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:weightSum="2"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:id="@+id/layout_text"
                                android:orientation="horizontal"
                                android:background="@drawable/custom_button">

                                <ImageView
                                    android:src="@drawable/ic_user"
                                    android:layout_width="70dp"
                                    android:layout_height="50dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@string/pic" />
                                <EditText
                                    android:id="@+id/name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginStart="10dp"
                                    android:inputType="textPersonName"
                                    android:hint="@string/hint"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:weightSum="2"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:id="@+id/layout_text1"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/custom_button">

                                <ImageView
                                    android:src="@drawable/ic_mail"
                                    android:layout_width="70dp"
                                    android:layout_height="50dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@string/pic1" />
                                <EditText
                                    android:id="@+id/email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginStart="10dp"
                                    android:inputType="textEmailAddress"
                                    android:hint="@string/hint1"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:weightSum="2"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:id="@+id/layout_text2"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/custom_button">

                                <ImageView
                                    android:src="@drawable/ic_phone"
                                    android:layout_width="70dp"
                                    android:layout_height="50dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@string/pic1" />
                                <EditText
                                    android:id="@+id/contact"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginStart="10dp"
                                    android:inputType="text"
                                    android:hint="@string/hint2"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:weightSum="2"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:id="@+id/layout_text3"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/custom_button">

                                <ImageView
                                    android:src="@drawable/ic_blood"
                                    android:layout_width="70dp"
                                    android:layout_height="50dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@string/pic1" />
                                <EditText
                                    android:id="@+id/bloodgroup"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginStart="10dp"
                                    android:inputType="text"
                                    android:hint="@string/hin"/>

                            </LinearLayout>
                            <Button
                                android:id="@+id/btn_logout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/six"
                                android:background="@drawable/round_button"
                                android:textColor="@android:color/white"
                                android:layout_marginRight="30dp"
                                android:layout_marginTop="30dp"
                                android:layout_marginBottom="30dp"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginLeft="30dp"/>

                        </LinearLayout>
                    </ScrollView>



                </LinearLayout>


            </FrameLayout>
        </LinearLayout>
    </TabHost>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_items"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"
        android:id="@+id/nav_drawer"
        android:background="#ffffff">

    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>